--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.5.1'
 
     // firebase
     implementation 'com.google.firebase:firebase-firestore-ktx:24.3.1'
@@ -89,6 +92,9 @@ dependencies {
     // MapBox
     implementation 'com.mapbox.maps:android:10.3.0'
     implementation "com.mapbox.navigation:android:2.3.0"
+
+    // Shimmer
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
 
 }
